Closed Bug 196271 Opened 23 years ago Closed 23 years ago

[FIX]possible double-delete if SetHTMLAttribute fails in nsDOMCSSAttributeDeclaration::SetCSSDeclaration

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

(Whiteboard: [whitebox])

Attachments

(1 file)

Whiteboard: [whitebox]
Attachment #117171 - Flags: superreview?(dbaron)
Attachment #117171 - Flags: review?(dbaron)
Summary: possible double-delete if SetHTMLAttribute fails in nsDOMCSSAttributeDeclaration::SetCSSDeclaration → [FIX]possible double-delete if SetHTMLAttribute fails in nsDOMCSSAttributeDeclaration::SetCSSDeclaration
Comment on attachment 117171 [details] [diff] [review] Proposed patch..... r+sr=dbaron, but we should really just get rid of |RuleAbort|, rename |mRuleRefs| to |mRefCnt|, and use the reference count to deal with ownership.
Attachment #117171 - Flags: superreview?(dbaron)
Attachment #117171 - Flags: superreview+
Attachment #117171 - Flags: review?(dbaron)
Attachment #117171 - Flags: review+
Yeah, that would be bug 196273. Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: