Avoid possible double-delete of CSS declaration.  Bug 196271, r+sr=dbaron