layout/style/nsDOMCSSAttrDeclaration.h
@@ -59,6 +59,8 @@ public:
                             nsAString& aReturn);
 
   virtual void DropReference();
+  // If GetCSSDeclaration returns non-null, then the decl it returns
+  // is owned by our current style rule.
   virtual nsresult GetCSSDeclaration(nsCSSDeclaration **aDecl,
                                      PRBool aAllocate);
   virtual nsresult GetCSSParsingEnvironment(nsIContent* aContent,
@@ -73,7 +75,8 @@ public:
   virtual nsresult GetParent(nsISupports **aParent);
 
 protected:
-  nsresult SetCSSDeclaration(nsCSSDeclaration* aDecl, PRBool aNotify);
+  nsresult SetCSSDeclaration(nsCSSDeclaration* aDecl, PRBool aNotify,
+                             PRBool aDeclOwnedByRule);
   
   nsIHTMLContent *mContent;
 };
